--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
     datasource:
-        name: test
+        name: Test
         url: jdbc:mysql://127.0.0.1:3306/springboot
         username: root
         password: 123456
